--- a/css/products.css
+++ b/css/products.css
@@ -291,6 +291,128 @@ main {
     display: none;
   }
 }
+.search {
+  position: fixed;
+  margin: 0 auto;
+  top: 74px;
+  left: 50%;
+  z-index: 20;
+  display: none;
+}
+.search__info {
+  text-align: center;
+  margin-top: 15px;
+}
+.search__products {
+  width: 500px;
+  left: -400px;
+  position: absolute;
+  height: 170px;
+  overflow-y: scroll;
+  background-color: #fff;
+  padding: 15px 20px;
+}
+.search__card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 20px;
+  border: 1px solid #f3f2f1;
+  border-radius: 4px;
+  margin-bottom: 8px;
+  padding: 10px 8px;
+}
+.search__card:hover {
+  -webkit-box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.75);
+          box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.75);
+}
+.search__card__img {
+  width: 120px;
+  height: 120px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+.search__card__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.search__card__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 8px;
+  margin-bottom: 4px;
+}
+.search__card__desc {
+  margin-bottom: 4px;
+}
+.search__card__discount {
+  border-radius: 4px;
+  background: #ff6633;
+  color: #FFf;
+  padding: 0 4px;
+}
+.search__card__price {
+  margin-bottom: 4px;
+}
+.search__card__btn {
+  width: 100%;
+  border: 1px solid #70c05b;
+  border-radius: 4px;
+  padding: 4px;
+  background-color: #fff;
+  color: #70c05b;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.search__card__btn:hover {
+  border: 1px solid #ff6633;
+  color: #fff;
+  background-color: #ff6633;
+}
+
+@media only screen and (max-width: 800px) {
+  .search__products {
+    left: -300px;
+  }
+}
+@media only screen and (max-width: 656px) {
+  .search__products {
+    left: -250px;
+  }
+}
+@media only screen and (max-width: 535px) {
+  .search__products {
+    width: 400px;
+    left: -200px;
+  }
+}
+@media only screen and (max-width: 430px) {
+  .search__products {
+    width: 380px;
+    left: -190px;
+  }
+  .search__card__desc {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
+}
 main {
   background: rgb(251, 248, 236);
 }
