--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -208,3 +208,130 @@
         }
     }
 }
+
+.search{
+    position: fixed;
+    margin: 0 auto;
+    top: 74px;
+    left: 50%;
+    z-index: 20;
+    display: none;
+
+    &__info{
+        text-align: center;
+        margin-top: 15px;
+    }
+
+    &__products{
+        width: 500px;
+        left: -400px;
+        position: absolute;
+        height: 170px;
+        overflow-y: scroll;
+        background-color: #fff;
+        padding: 15px 20px;
+    }
+
+    &__card{
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        border: 1px solid var.$lightest;
+        border-radius: 4px;
+        margin-bottom: 8px;
+        padding: 10px 8px;
+        &:hover{
+            box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.75);
+        }
+
+        &__img{
+            width: 120px;
+            height: 120px;
+            object-fit: contain;
+        }
+
+        &__wrapper{
+            display: flex;
+            flex-direction: column;
+        }
+
+        &__inner{
+           @include mxn.flex-center(space-between,);
+            padding: 0 8px;
+            margin-bottom: 4px;
+        }
+
+        &__desc{
+            margin-bottom: 4px;
+        }
+
+        &__discount{
+            border-radius: 4px;
+            background: var.$primary;
+            color: #FFf;
+            padding: 0 4px;
+        }
+
+        &__price{
+            margin-bottom: 4px;
+        }
+
+        &__btn{
+            width: 100%;
+            border: 1px solid var.$secondary;
+            border-radius: 4px;
+            padding: 4px;
+            background-color: #fff;
+            color: var.$secondary;
+            transition: all 0.3s;
+
+            &:hover {
+                border: 1px solid var.$primary;
+                color: #fff;
+                background-color: var.$primary;
+            }
+        }
+    }
+
+}
+
+@include mxn.media(800px){
+    .search{
+        &__products{
+            left: -300px;
+        }
+    }
+}
+@include mxn.media(656px){
+    .search{
+        &__products{
+            left: -250px;
+        }
+    }
+}
+@include mxn.media(535px){
+    .search{
+        &__products{
+            width: 400px;
+            left: -200px;
+        }
+    }
+}
+@include mxn.media(430px){
+    .search{
+        
+        &__products{
+            width: 380px;
+            left: -190px;
+        }
+        &__card{
+
+            &__desc{
+                display: -webkit-box;
+                -webkit-line-clamp: 2;
+                -webkit-box-orient: vertical;
+                overflow: hidden;
+            }
+        }
+    }
+}
